--- a/freeCodeCamp/Javascript/Debugging/index.html
+++ b/freeCodeCamp/Javascript/Debugging/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="index.js"></script>
+    <link rel="icon" href="" />
+
+    <script src="matrix.js"></script>
   </head>
-  <body></body>
+  <body>
+    Hey Christos
+  </body>
 </html>
