--- a/Back End Builder/week_1/runApp.html
+++ b/Back End Builder/week_1/runApp.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   </head>
   <body>
-    <script src="appGreeting.js"></script>
+    <script src="arrowFunctions.js"></script>
   </body>
 </html>
