--- a/Back End Builder/javascript/runApp.html
+++ b/Back End Builder/javascript/runApp.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1 id="myH1"></h1>
-    <script src="arrowFunctions/arrowFunctions.js"></script>
+    <script src="defaultParameters.js"></script>
   </body>
 </html>
